--- a/User-Details-with-Security/userdetails-security/src/main/resources/application.properties
+++ b/User-Details-with-Security/userdetails-security/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/user_details_test
+spring.datasource.url= jdbc:mysql://localhost:3306/user_details_test2
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
